--- a/src/assets/less/login/loginWindow.css
+++ b/src/assets/less/login/loginWindow.css
@@ -15,3 +15,13 @@
   margin-bottom: 20px;
   font-size: 32px;
 }
+#login_window .remember_psw {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  padding: 0 3px;
+}
+#login_window .login_btn {
+  width: 100%;
+  margin-top: 10px;
+}
