--- a/src/assets/less/login/loginWindow.less
+++ b/src/assets/less/login/loginWindow.less
@@ -14,4 +14,16 @@
       font-size: 32px;
     }
   }
+
+  .remember_psw {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    padding: 0 3px;
+  }
+
+  .login_btn {
+    width: 100%;
+    margin-top: 10px;
+  }
 }
