--- a/src/assets/less/main/main.less
+++ b/src/assets/less/main/main.less
@@ -18,4 +18,9 @@
       }
     }
   }
+  .el-aside {
+    transition: width 0.3s linear;
+    scrollbar-width: none; /* firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+  }
 }
