feat(searchform): package searchform

--- a/src/assets/less/asideMenu/asideMenu.less
+++ b/src/assets/less/asideMenu/asideMenu.less
@@ -3,14 +3,14 @@
   .logo_wrap {
     display: flex;
     text-align: center;
-    width: 210px;
+    // width: 210px;
     height: 48px;
     padding: 8px 10px;
     cursor: pointer;
     .img {
       width: 30px;
       height: 30px;
-      margin-left: 5px;
+      margin-left: 8px;
     }
     .title {
       flex: 1;
