--- a/src/assets/less/main/main.less
+++ b/src/assets/less/main/main.less
@@ -15,6 +15,10 @@
       #main_box {
         background-color: #f0f2f5;
         color: #333;
+
+        .page_info {
+          background-color: #fff;
+        }
       }
     }
   }
