--- a/src/assets/less/mainHeader/mainHeader.css
+++ b/src/assets/less/mainHeader/mainHeader.css
@@ -7,3 +7,14 @@
   font-size: 26px;
   cursor: pointer;
 }
+.main_header .header_bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0 15px 0 25px;
+}
+.main_header .header_bar .toast {
+  cursor: pointer;
+}
