--- a/src/assets/less/mainHeader/mainHeader.less
+++ b/src/assets/less/mainHeader/mainHeader.less
@@ -6,4 +6,17 @@
     font-size: 26px;
     cursor: pointer;
   }
+
+  .header_bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 15px 0 25px;
+
+    .toast {
+      cursor: pointer;
+    }
+  }
 }
